[package]
name = "kfd"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.0"
anyhow = "1.0"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10"
log = "0.4"


[[bin]]
name = "keyfound"
path = "src/bin/keyfound.rs"

[[bin]]
name = "kfctl"
path = "src/bin/kfctl.rs"
